Update README to match current config.
Original contents described the method of using hg-git
(Mercurial Git plugin) for creating this repository. It turns out
that hg-git is not stable enough yet for this task (I tried 0.2.1).

The master branch is now generated by fast-export script.

Pros: commit messages are identical to official mercurial repo.
Cons: commit messages do not include extra data for perfect git-to-hg
      conversion.

--- a/README
+++ b/README
@@ -2,15 +2,16 @@ Git clone of https://code.google.com/p/html5lib/
 
 Warning: this clone is not automatically updated.
 
-How to update (requires hg-git plugin for mercurial)
+The master branch is created as follows:
 
-hg clone https://code.google.com/p/html5lib/
-hg bookmark -f master
-hg push git+ssh://git@github.com:mikkorantalainen/html5lib.git
+git clone git://repo.or.cz/fast-export.git
+hg clone https://code.google.com/p/html5lib/ html5lib.hg
+git init html5lib.git
+cd html5lib.git
+../fast-export/hg-fast-export.sh -r ../html5lib.hg
+git checkout HEAD
 
-or if you already have hg repo
-
-hg pull
-hg bookmark -f master
-hg push git+ssh://git@github.com:mikkorantalainen/html5lib.git
+Please, do NOT commit file called 'README' into the master branch only to
+get github to display its contents automatically. The intent is to keep
+master branch equal to original mercurial version.
 
